--- a/src/templates/partials/hero-form.twig
+++ b/src/templates/partials/hero-form.twig
@@ -19,7 +19,9 @@
               </div>
               <div class="input-group__button">
                 <button type="submit" class="hero-form__button button" aria-label="Search">
-                  <span aria-hidden="true">{{icons.search_lg}}</span>
+                  <svg class="icon" aria-hidden="true">
+                    <use xlink:href="#icon-search" />
+                  </svg>
                 </button>
               </div>
             </div>
