--- a/src/templates/partials/search-form.twig
+++ b/src/templates/partials/search-form.twig
@@ -6,7 +6,11 @@
         <input type="search" placeholder="Enter your keywords" class="form__control search-form__control" required>
       </div>
       <div class="input-group__button">
-        <button type="submit" class="button search-form__button">{{icons.search_md}}</button>
+        <button type="submit" class="button search-form__button">
+          <svg class="icon icon--sm">
+            <use xlink:href="#icon-search" />
+          </svg>
+        </button>
       </div>
     </div>
   </div>
