--- a/src/templates/partials/social-links.twig
+++ b/src/templates/partials/social-links.twig
@@ -2,7 +2,9 @@
   {% for item in items %}
     <li class="social-links__item">
       <a href="{{item.href}}" class="social-links__link">
-        {{icons[item.slug]}}
+        <svg class="icon">
+          <use xlink:href="#icon-{{item.slug}}" />
+        </svg>
       </a>
     </li>
   {% endfor %}
