--- a/src/templates/paragraphs/slideshow.twig
+++ b/src/templates/paragraphs/slideshow.twig
@@ -17,11 +17,15 @@
     <div class="slideshow__footer">
       <div class="slideshow__controls">
         <button class="slideshow__button slideshow__button--prev js-slideshow-prev" aria-label="Previous slide">
-          <span aria-hidden="true">{{icons.chevron_left}}</span>
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-arrow-left" />
+          </svg>
         </button>
         <div class="slideshow__pagination js-slideshow-pagination"></div>
         <button class="slideshow__button slideshow__button--next js-slideshow-next" aria-label="Next slide">
-          <span aria-hidden="true">{{icons.chevron_right}}</span>
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-arrow-right" />
+          </svg>
         </button>
       </div>
     </div>
