--- a/src/templates/partials/header.twig
+++ b/src/templates/partials/header.twig
@@ -29,11 +29,9 @@
             <div class="input-group__button">
               <button type="submit" class="button site-search__button">
                 <span class="sr-only">Search</span>
-                <span aria-hidden="true">
-                  <svg class="icon">
-                    <use xlink:href="#icon-search" />
-                  </svg>
-                </span>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-search" />
+                </svg>
               </button>
             </div>
           </div>
