--- a/src/templates/partials/sidebar-search.twig
+++ b/src/templates/partials/sidebar-search.twig
@@ -6,7 +6,12 @@
         <input type="search" placeholder="Search events" id="midd-sidebar-search" class="form__control sidebar-search__control" required>
       </div>
       <div class="input-group__button">
-        <button type="submit" class="button button--secondary sidebar-search__button">{{icons.search}}</button>
+        <button type="submit" class="button button--secondary sidebar-search__button">
+          <span class="sr-only">Search</span>
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-search" />
+          </svg>
+        </button>
       </div>
     </div>
   </form>
