--- a/src/templates/t07-events.twig
+++ b/src/templates/t07-events.twig
@@ -11,7 +11,9 @@
   } %}
     {% block controls %}
       <a href="#midd-filters-drawer" data-toggle-target=".js-filters-drawer" data-toggle-linked="filters-drawer" aria-label="Toggle filters">
-        <span aria-hidden="true">{{icons.search_lg}}</span>
+        <svg class="icon icon--lg" aria-hidden="true">
+          <use xlink:href="#icon-search" />
+        </svg>
       </a>
     {% endblock %}
   {% endembed %}
