--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -59,11 +59,19 @@
 
                 <ul class="list u-mb-6">
                   <li class="list__item">
-                    <span class="list__icon" aria-hidden="true">{{icons.map}}</span>
+                    <span class="list__icon">
+                      <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-map" />
+                      </svg>
+                    </span>
                     <a href="#" class="u-link-border">View in Campus Map</a>
                   </li>
                   <li class="list__item">
-                    <span class="list__icon" aria-hidden="true">{{icons.calendar}}</span>
+                    <span class="list__icon">
+                      <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-calendar" />
+                      </svg>
+                    </span>
                     <a href="#" class="u-link-border">Add to my calendar</a>
                   </li>
                 </ul>
