--- a/src/templates/t21-contact.twig
+++ b/src/templates/t21-contact.twig
@@ -71,11 +71,19 @@
 
                   <ul class="list">
                     <li class="list__item">
-                      <span class="list__icon">{{icons.map}}</span>
+                      <span class="list__icon">
+                        <svg class="icon" aria-hidden="true">
+                          <use xlink:href="#icon-map" />
+                        </svg>
+                      </span>
                       <a href="#" class="u-link-border">View in Google Maps</a>
                     </li>
                     <li class="list__item">
-                      <span class="list__icon">{{icons.compass}}</span>
+                      <span class="list__icon">
+                        <svg class="icon" aria-hidden="true">
+                          <use xlink:href="#icon-compass" />
+                        </svg>
+                      </span>
                       <a href="#" class="u-link-border">Get Directions</a>
                     </li>
                   </ul>
