Move figure elements inside anchors in images that link to content.

--- a/src/templates/partials/event-card.twig
+++ b/src/templates/partials/event-card.twig
@@ -1,11 +1,13 @@
 <article class="event-card">
-  <figure class="event-card__media">
+  <div class="event-card__media">
     <a href="#">
-      <picture>
-        <img src="//placehold.it/400x300" alt="">
-      </picture>
+      <figure class="media media-image view-mode-related">
+        <picture>
+          <img src="//placehold.it/400x300" alt="">
+        </picture>
+      </figure>
     </a>
-  </figure>
+  </div>
   <h3 class="event-card__title"><a href="#">Middlebury Institute’s TESOL/TFL Program: Innovations in Language Learning</a></h3>
   {#Not sure why, but this twig compilation is not letting me wrap the times with <time> while keeping no spaces around ndash#}
   <p class="event-card__datetime">September 24, 2017 &middot; 4:15&nbsp;PM</p>
