--- a/src/templates/partials/publications.twig
+++ b/src/templates/partials/publications.twig
@@ -10,11 +10,13 @@
           <div class="swiper-wrapper">
             {% for i in 0..7 %}
               <div class="publications__item swiper-slide">
-                <figure class="publications__cover">
+                <div class="publications__cover">
                   <a href="#">
-                    <img src="//placehold.it/148x184" alt="">
+                    <figure>
+                      <img src="//placehold.it/148x184" alt="">
+                    </figure>
                   </a>
-                </figure>
+                </div>
                 <h3 class="publications__title"><a href="#">An Economic Justification for the Development and Establishment of Seascapes in the Coral Triangle</a></h3>
               </div>
             {% endfor %}
