--- a/src/templates/partials/story-teaser.twig
+++ b/src/templates/partials/story-teaser.twig
@@ -1,13 +1,15 @@
 <article class="story-teaser">
-  <figure class="story-teaser__media">
+  <div class="story-teaser__media">
     <a href="{{url}}">
-      <picture>
-        <source srcset="http://placehold.it/160x120" media="(min-width: 580px)">
-        <source srcset="http://placehold.it/100x75">
-        <img src="http://placehold.it/160x120" srcset="" alt="">
-      </picture>
+      <figure class="media media-image view-mode-teaser">
+        <picture>
+          <source srcset="http://placehold.it/160x120" media="(min-width: 580px)">
+          <source srcset="http://placehold.it/100x75">
+          <img src="http://placehold.it/160x120" srcset="" alt="">
+        </picture>
+      </figure>
     </a>
-  </figure>
+  </div>
   <div class="story-teaser__body">
     <time datetime="" class="story-teaser__pubdate">Jun 8, 2017</time>
     <h3 class="story-teaser__title"><a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing</a></h3>
