--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -24,7 +24,7 @@
 .section__title {
   // TODO: need to use a heading element or class e.g. .h3
   text-transform: uppercase;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   font-weight: $font-weight-semibold;
   font-family: $font-family-sans-serif-condensed;
   font-size: 16px;
