--- a/src/templates/partials/event-teaser-lite.twig
+++ b/src/templates/partials/event-teaser-lite.twig
@@ -1,5 +1,5 @@
 <article class="event-teaser-lite">
-  <p class="event-teaser-lite__meta"><time datetime="">June 24, 2017 &middot; 11:45 AM</time></p>
+  <p class="event-teaser-lite__datetime"><time datetime="">June 24, 2017 &middot; 11:45 AM</time></p>
   <h3 class="event-teaser-lite__title"><a href="{{url|default('#')}}">{{title}}</a></h3>
   <p class="event-teaser-lite__local">{{location}}</p>
 </article>
