change spotlight item to not use footer because its just a link container

--- a/src/templates/partials/program-spotlight-item.twig
+++ b/src/templates/partials/program-spotlight-item.twig
@@ -17,7 +17,7 @@
         </h3>
         <p class="spotlight-item__blurb">{{program.blurb}}</p>
       </div>
-      <footer class="spotlight-item__footer">
+      <div class="spotlight-item__footer">
         <a href="#"
           class="button button--secondary button--circle"
           data-toggle-target=".js-spotlight-item-{{id}}"
@@ -25,7 +25,7 @@
           data-toggle-group="spotlight-items">
           &plus;
         </a>
-      </footer>
+      </div>
 
     </div>
     <aside class="spotlight-item__side spotlight-item__side--back">
