remove card from homepage hero and clean up

--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -5,7 +5,7 @@
   align-items: space-between;
 
   @include media(md) {
-    height: 675px;
+    height: $header-height;
     position: absolute;
     z-index: 3;
 
