--- a/src/templates/partials/homepage-hero.twig
+++ b/src/templates/partials/homepage-hero.twig
@@ -1,9 +1,9 @@
 <article class="homepage-hero">
-  <figure class="homepage-hero__background">
-    <picture class="homepage-hero__image">
-      <source srcset="//placehold.it/1125x857 1x, //placehold.it/2250x1714 2x" media="(min-width: 580px)">
-      <source srcset="//placehold.it/1160x884">
-      <img src="//placehold.it/1125x857" alt="">
+  <figure class="homepage-hero__media">
+    <picture>
+      <source srcset="http://lorempixel.com/1040/780/city/" media="(min-width: 580px)">
+      <source srcset="http://lorempixel.com/1160/870/city/">
+      <img src="http://lorempixel.com/1160/870/city/" alt="">
     </picture>
   </figure>
   <section class="homepage-hero__content">
@@ -11,21 +11,10 @@
       <h1 class="homepage-hero__title">
         <a href="#" class="homepage-hero__link">Water Sanitation Research and Development, India</a>
       </h1>
-      <p class="homepage-hero__blurb">Access to safe water and adequate sanitation services has proven to be one of the most efficient ways of improving human health.</p>
+      <p class="homepage-hero__text">Access to safe water and adequate sanitation services has proven to be one of the most efficient ways of improving human health.</p>
       <div class="homepage-hero__more-link">
         <a href="#" class="button button--secondary">Read More</a>
       </div>
-      <div class="homepage-hero__card-controls">
-        <a href="#" class="homepage-hero__card-toggler button button--secondary button--circle" data-toggle-target=".homepage-hero__content" data-toggle-linked="homehero-card" aria-label="Open additional info">
-          <span aria-hidden="true">&plus;</span>
-        </a>
-      </div>
     </div>
-    <aside class="homepage-hero__card">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt labore officiis maxime sit repellat minus voluptate suscipit. Distinctio nulla at vero, corporis accusantium obcaecati laudantium in provident, commodi consequuntur maiores.</p>
-      <a href="#" class="button button--primary button--circle" data-toggle-target=".homepage-hero__content" data-toggled-link="homehero-card" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </a>
-    </aside>
   </section>
 </article>
