--- a/src/templates/partials/program-spotlight-item.twig
+++ b/src/templates/partials/program-spotlight-item.twig
@@ -1,6 +1,6 @@
-<article class="spotlight-item{% if program.light == true %} spotlight-item--light{% endif %} js-spotlight-item-{{id}}">
+<article class="program-spotlight-item js-spotlight-item-{{id}}">
 
-  <figure class="spotlight-item__image">
+  <figure class="program-spotlight-item__image">
     <picture>
       <source srcset="{{program.image_md}} 1x, {{program.image_md_2x}} 2x" media="(min-width: 580px)">
       <source srcset="{{program.image_xs}} 1x, {{program.image_xs_2x}} 2x" media="(min-width: 0)">
@@ -8,16 +8,16 @@
     </picture>
   </figure>
 
-  <div class="spotlight-item__content">
-    <div class="spotlight-item__side spotlight-item__side--front">
+  <div class="program-spotlight-item__content">
+    <div class="program-spotlight-item__side program-spotlight-item__side--front">
 
-      <div class="spotlight-item__body">
-        <h3 class="spotlight-item__title">
-          <a href="{{program.href}}" class="spotlight-item__link">{{program.title}}</a>
+      <div class="program-spotlight-item__body">
+        <h3 class="program-spotlight-item__title">
+          <a href="{{program.href}}" class="program-spotlight-item__link">{{program.title}}</a>
         </h3>
-        <p class="spotlight-item__blurb">{{program.blurb}}</p>
+        <p class="program-spotlight-item__blurb">{{program.blurb}}</p>
       </div>
-      <div class="spotlight-item__footer">
+      <div class="program-spotlight-item__footer">
         <a href="#"
           class="button button--secondary button--circle"
           data-toggle-target=".js-spotlight-item-{{id}}"
@@ -28,10 +28,10 @@
       </div>
 
     </div>
-    <aside class="spotlight-item__side spotlight-item__side--back">
+    <aside class="program-spotlight-item__side program-spotlight-item__side--back">
 
       <a href="#"
-        class="spotlight-item__close-button"
+        class="program-spotlight-item__close-button"
         role="button"
         aria-label="Close"
         data-toggle-target=".js-spotlight-item-{{id}}"
@@ -39,10 +39,10 @@
         <span aria-hidden="true">&times;</span>
       </a>
 
-      <div class="spotlight-item__body">
+      <div class="program-spotlight-item__body">
         <p>{{program.card.body}}</p>
       </div>
-      <footer class="spotlight-item__footer">
+      <footer class="program-spotlight-item__footer">
         <a href="{{program.card.link_href}}" class="button button--secondary button--pill button--block">{{program.card.link_text}}</a>
       </footer>
 
