remove callout usage from program spotlight

--- a/src/scss/components/_program-spotlight.scss
+++ b/src/scss/components/_program-spotlight.scss
@@ -8,14 +8,8 @@
   height: 100%;
   padding: 50px;
   background-color: $brand-primary;
-
-  .callout__title {
-    font-size: 30px;
-
-    @include media(md) {
-      font-size: 40px;
-    }
-  }
+  display: flex;
+  flex-direction: column;
 
   @include media(sm) {
     padding-top: 100px;
@@ -30,16 +24,26 @@
   }
 }
 
+.program-spotlight__title {
+  color: $white;
+  font-size: 30px;
+  margin-bottom: 10px;
+
+  @include media(md) {
+    font-size: 40px;
+  }
+}
+
 .program-spotlight__controls {
   display: none;
 
   @include media(sm) {
     display: block;
+    margin-top: auto;
   }
 }
 
 .program-spotlight__container {
-
 }
 
 .program-spotlight__content {
@@ -55,7 +59,7 @@
 
 .program-spotlight__item {
   // only shows the first 3 items on mobile
-  &:nth-of-type(n+4) {
+  &:nth-of-type(n + 4) {
     @include media-breakpoint-down(sm) {
       display: none;
     }
