fix breakpoint value so items are not hidden when the program is still a carousel

--- a/src/scss/components/_program-spotlight.scss
+++ b/src/scss/components/_program-spotlight.scss
@@ -60,7 +60,7 @@
 .program-spotlight__item {
   // only shows the first 3 items on mobile
   &:nth-of-type(n + 4) {
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(xs) {
       display: none;
     }
   }
