wrap program spotlight button in div so button does not get flex display

--- a/src/templates/partials/program-spotlight.twig
+++ b/src/templates/partials/program-spotlight.twig
@@ -4,7 +4,9 @@
 
       <div class="program-spotlight__header">
         <h2 class="program-spotlight__title">Program Spotlight</h2>
-        <a href="#" class="button button--secondary">Explore our Programs</a>
+        <div class="program-spotlight__button">
+          <a href="#" class="button button--secondary">Explore our Programs</a>
+        </div>
         <div class="program-spotlight__controls" aria-label="carousel controls" role="navigation">
           <button class="button button--secondary button--circle js-program-spotlight-prev-button" aria-label="Previous">
             <span aria-hidden="true">&lsaquo;</span>
