--- a/src/scss/components/_callout.scss
+++ b/src/scss/components/_callout.scss
@@ -10,7 +10,8 @@
   }
 }
 
-.callout--light {}
+.callout--light {
+}
 
 .callout__header {
   flex: 0 1 auto;
@@ -57,4 +58,5 @@
   margin-bottom: 0;
 }
 
-.callout__button {}
+.callout__button {
+}
