--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <div class="container">
-    <div class="row row--dividers row--dividers-light">
-      <div class="col-lg-3">
+    <div class="row">
+      <div class="col-lg-3 border-lg-r border-secondary-dark">
 
         <div class="site-footer__content">
           {% embed 'partials/callout.twig' with {
