redo columns for footer menus so they have more space around them

--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -34,7 +34,7 @@
       <div class="col-lg-9">
         <div class="row">
           {% for menu in footer_nav %}
-            <div class="col-sm-3">
+            <div class="col-sm-6 col-md-3">
               {% include 'partials/footer-menu.twig' with menu %}
             </div>
           {% endfor %}
