--- a/src/scss/utils/_text.scss
+++ b/src/scss/utils/_text.scss
@@ -2,6 +2,16 @@
   text-align: left;
 }
 
+.u-text-center {
+  text-align: center;
+}
+
+.u-text-md-left {
+  @include media(md) {
+    text-align: left;
+  }
+}
+
 .u-serif {
   font-family: $font-family-serif;
 }
