--- a/src/scss/utils/_spacing.scss
+++ b/src/scss/utils/_spacing.scss
@@ -1,12 +1,55 @@
-.u-my-6 {
-  margin-top: 60px;
-  margin-bottom: 60px;
-}
+// https://github.com/twbs/bootstrap/blob/v4.0.0-beta/scss/utilities/_spacing.scss
 
-.u-mb-0 {
-  margin-bottom: 0;
-}
+// TODO: update bootstrap to v4-beta so we can just import the _spacing.scss file in main.scss
+// Can't do this yet because the grid changed from alpha.6 to beta
 
-.u-mb-6 {
-  margin-bottom: 60px;
+// TODO: prefix with u- for utility?
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+
+    @each $prop, $abbrev in (margin: m, padding: p) {
+      @each $size, $length in $spacers {
+        // .#{$abbrev}#{$infix}-#{$size} {
+        //   #{$prop}: $length !important;
+        // }
+        .#{$abbrev}t#{$infix}-#{$size} {
+          #{$prop}-top: $length !important;
+        }
+        .#{$abbrev}r#{$infix}-#{$size} {
+          #{$prop}-right: $length !important;
+        }
+        .#{$abbrev}b#{$infix}-#{$size} {
+          #{$prop}-bottom: $length !important;
+        }
+        .#{$abbrev}l#{$infix}-#{$size} {
+          #{$prop}-left: $length !important;
+        }
+        // .#{$abbrev}x#{$infix}-#{$size} {
+        //   #{$prop}-right: $length !important;
+        //   #{$prop}-left: $length !important;
+        // }
+        // .#{$abbrev}y#{$infix}-#{$size} {
+        //   #{$prop}-top: $length !important;
+        //   #{$prop}-bottom: $length !important;
+        // }
+      }
+    }
+
+    // Some special margin utils
+    // .m#{$infix}-auto  { margin:        auto !important; }
+    // .mt#{$infix}-auto { margin-top:    auto !important; }
+    // .mr#{$infix}-auto { margin-right:  auto !important; }
+    // .mb#{$infix}-auto { margin-bottom: auto !important; }
+    // .ml#{$infix}-auto { margin-left:   auto !important; }
+    // .mx#{$infix}-auto {
+    //   margin-right: auto !important;
+    //   margin-left:  auto !important;
+    // }
+    // .my#{$infix}-auto {
+    //   margin-top:    auto !important;
+    //   margin-bottom: auto !important;
+    // }
+  }
 }
