add border utils

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -94,6 +94,7 @@
 @import 'utils/float';
 @import 'utils/text';
 @import 'utils/spacing';
+@import 'utils/borders';
 @import 'utils/toggler';
 
 .u-link-border {
