--- a/src/templates/partials/program-spotlight-item.twig
+++ b/src/templates/partials/program-spotlight-item.twig
@@ -1,12 +1,14 @@
 <article class="program-spotlight-item js-spotlight-item-{{id}}">
 
-  <figure class="program-spotlight-item__image">
-    <picture>
-      <source srcset="{{program.image_md}} 1x, {{program.image_md_2x}} 2x" media="(min-width: 580px)">
-      <source srcset="{{program.image_xs}} 1x, {{program.image_xs_2x}} 2x" media="(min-width: 0)">
-      <img src="{{program.image_md}}" alt="{{program.image_alt}}">
-    </picture>
-  </figure>
+  <div class="program-spotlight-item__image">
+    <figure>
+      <picture>
+        <source srcset="{{program.image_md}} 1x, {{program.image_md_2x}} 2x" media="(min-width: 580px)">
+        <source srcset="{{program.image_xs}} 1x, {{program.image_xs_2x}} 2x">
+        <img src="{{program.image_md}}" alt="{{program.image_alt}}">
+      </picture>
+    </figure>
+  </div>
 
   <div class="program-spotlight-item__content">
     <div class="program-spotlight-item__side program-spotlight-item__side--front">
@@ -30,21 +32,26 @@
     </div>
     <aside class="program-spotlight-item__side program-spotlight-item__side--back">
 
-      <a href="#"
-        class="program-spotlight-item__close-button"
-        role="button"
-        aria-label="Close"
-        data-toggle-target=".js-spotlight-item-{{id}}"
-        data-toggle-linked="spotlight-item-{{id}}">
-        <span aria-hidden="true">&times;</span>
-      </a>
+      <div class="program-spotlight-item__controls">
+        <button
+          class="button button--secondary button--circle"
+          role="button"
+          aria-label="Close"
+          data-toggle-target=".js-spotlight-item-{{id}}"
+          data-toggle-linked="spotlight-item-{{id}}">
+          &times;
+          {# <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-x-circle" />
+          </svg> #}
+        </button>
+      </div>
 
       <div class="program-spotlight-item__body">
-        <p>{{program.card.body}}</p>
+        <p class="program-spotlight-item__text">{{program.card.body}}</p>
       </div>
-      <footer class="program-spotlight-item__footer">
+      <div class="program-spotlight-item__footer">
         <a href="{{program.card.link_href}}" class="button button--secondary button--pill button--block">{{program.card.link_text}}</a>
-      </footer>
+      </div>
 
     </aside>
   </div>
