add aria labelledby to program spotlight

--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -94,7 +94,7 @@
 
   </div>
 
-  <section class="section">
+  <section class="section" aria-labelledby="midd-program-spotlight-label">
     {% include 'partials/program-spotlight.twig' %}
   </section>
 
