--- a/src/templates/partials/program-spotlight.twig
+++ b/src/templates/partials/program-spotlight.twig
@@ -3,7 +3,7 @@
     <div class="col-sm-4 col-lg-3">
 
       <div class="program-spotlight__header">
-        <h2 class="program-spotlight__title">Program Spotlight</h2>
+        <h2 class="program-spotlight__title" id="midd-program-spotlight-label">Program Spotlight</h2>
         <div class="program-spotlight__button">
           <a href="#" class="button button--secondary">Explore our Programs</a>
         </div>
