--- a/src/templates/partials/program-spotlight.twig
+++ b/src/templates/partials/program-spotlight.twig
@@ -7,7 +7,7 @@
         <div class="program-spotlight__button">
           <a href="#" class="button button--secondary">Explore our Programs</a>
         </div>
-        <div class="program-spotlight__controls" aria-label="carousel controls" role="navigation">
+        <div class="program-spotlight__controls" aria-label="program spotlight controls" role="navigation">
           <button class="button button--secondary button--circle js-program-spotlight-prev-button" aria-label="Previous">
             <span aria-hidden="true">&lsaquo;</span>
           </button>
