change blurb to text on story teaser lite

--- a/src/scss/components/_story-teaser-lite.scss
+++ b/src/scss/components/_story-teaser-lite.scss
@@ -1,5 +1,4 @@
 .story-teaser-lite {
-
 }
 
 .story-teaser-lite__title {
@@ -7,8 +6,5 @@
   margin-bottom: 20px;
 }
 
-.story-teaser-lite__blurb {
-  p:last-of-type {
-    margin-bottom: 0;
-  }
+.story-teaser-lite__text {
 }
