--- a/src/templates/partials/story-teaser-lite.twig
+++ b/src/templates/partials/story-teaser-lite.twig
@@ -1,6 +1,4 @@
 <article class="story-teaser-lite">
   <h3 class="story-teaser-lite__title"><a href="{{link}}">{{title}}</a></h3>
-  <div class="story-teaser-lite__blurb">
-    {{blurb}}
-  </div>
+  <p class="story-teaser-lite__text">{{text}}</p>
 </article>
