make sure card has at least image_lg

--- a/src/templates/partials/card.twig
+++ b/src/templates/partials/card.twig
@@ -1,11 +1,11 @@
 <article class="card">
-  {% if image %}
+  {% if image_lg %}
     <figure class="card__media">
       <a href={{href}}>
         <picture>
-          <source srcset="{{image_lg}} 1x" media="(min-width: 960px)">
-          <source srcset="{{image_md}} 1x" media="(min-width: 580px)">
-          <source srcset="{{image_xs}} 1x">
+          <source srcset="{{image_lg}}" media="(min-width: 960px)">
+          <source srcset="{{image_md}}" media="(min-width: 580px)">
+          <source srcset="{{image_xs}}">
           <img src="{{image_lg}}" alt="">
         </picture>
       </a>
