--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -13,16 +13,25 @@
   <div class="container">
 
     <section class="section">
-      <div class="row row--dividers">
-        <div class="col-md-6 col-lg-3">
-          <h3><a href="#">Practical Innovation</a></h3>
-          <p>The world needs people who can understand our greatest challenges, from poverty to climate change, and the connections between them.</p>
+      <div class="row u-text-center u-text-md-left">
+        <div class="col-md-6 col-lg-3 border-md-r mb-4 mb-lg-0">
+          <div class="border-b border-md-b-0 pb-4 pb-md-0">
+            {% include 'partials/card.twig' with {
+              title: 'Practical Innovation',
+              text: 'The world needs people who can understand our greatest challenges, from poverty to climate change, and the connections between them.'
+            } %}
+          </div>
         </div>
-        <div class="col-md-6 col-lg-3">
-          <h3><a href="">Cultural Fluency</a></h3>
-          <p>Learning in language and intercultural studies are integral to an Institute education. These skills are central to achieving effective change around the world.</p>
+        <div class="col-md-6 col-lg-3 border-lg-r mb-4 mb-lg-0">
+          <div class="border-b border-md-b-0 pb-4 pb-md-0">
+          {% include 'partials/card.twig' with {
+            title: 'Cultural Fluency',
+            text: 'Learning in language and intercultural studies are integral to an Institute education. These skills are central to achieving effective change around the world.'
+          } %}
+          </div>
         </div>
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-3 border-md-r">
+          <div class="border-b border-md-b-0 pb-4 pb-md-0 mb-4 mb-md-0">
           {% include 'partials/callout.twig' with {
             preheader: 'Register for',
             title: 'Monterey Forum',
@@ -30,6 +39,7 @@
             buttonText: 'Register',
             buttonHref: '#',
           } %}
+          </div>
         </div>
         <div class="col-md-6 col-lg-3">
           {% include 'partials/callout.twig' with {
