--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -91,6 +91,7 @@
 
 // utils
 @import 'utils/clearfix';
+@import 'utils/display';
 @import 'utils/float';
 @import 'utils/text';
 @import 'utils/spacing';
