--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -10,7 +10,7 @@
 <body class="{% if bodyClass %}{{bodyClass}}{% endif %}" id="midd-pagetop">
   {% include 'partials/icons.twig' %}
   <nav aria-labelledby="midd-skip-link">
-    <a href="#midd-main" class="sr-only sr-focusable" id="midd-skip-link">Skip to content</a>
+    <a href="#midd-main" class="sr-only sr-only-focusable" id="midd-skip-link">Skip to content</a>
   </nav>
   <div class="site-container">
     {% include 'partials/header.twig' %}
