--- a/src/scss/components/_list.scss
+++ b/src/scss/components/_list.scss
@@ -13,10 +13,22 @@
     .list--lg & {
       margin-bottom: 60px;
     }
+  }
+}
 
-    .list--dividers & {
+.list--dividers {
+  .list__item {
+    &:not(:last-of-type) {
       border-bottom: 1px solid $line-gray;
       padding-bottom: 30px;
+    }
+  }
+
+  &.list--lg {
+    .list__item {
+      &:not(:last-of-type) {
+        padding-bottom: 60px;
+      }
     }
   }
 }
