--- a/src/templates/layout-sidebar.twig
+++ b/src/templates/layout-sidebar.twig
@@ -7,11 +7,11 @@
 
       <div class="row">
         <div class="col-md-4 flex-md-last">
-          {% block sidebar %}
+          {% block layout_sidebar %}
           {% endblock %}
         </div>
         <div class="col-md-8">
-          {% block content %}
+          {% block layout_content %}
           {% endblock %}
         </div>
       </div>
