--- a/src/templates/layout-sidebar.twig
+++ b/src/templates/layout-sidebar.twig
@@ -7,10 +7,11 @@
 
       <div class="row">
         <div class="col-md-4 flex-md-last">
+          <a href="#midd-content" class="sr-only sr-only-focusable">Skip sidebar</a>
           {% block layout_sidebar %}
           {% endblock %}
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8" id="midd-content">
           {% block layout_content %}
           {% endblock %}
         </div>
