finish up news listing template

--- a/src/templates/t09-news-listing.twig
+++ b/src/templates/t09-news-listing.twig
@@ -1,34 +1,28 @@
-{% extends "layout.twig" %}
+{% extends "layout-sidebar.twig" %}
 
-{% block page %}
-  <section class="page">
+{% set page_header = {
+  title: 'Latest Thinking',
+  breadcrumb: [
+    { text: 'Leadership and Impact' }
+  ]
+} %}
 
-    {% include 'partials/page-header.twig' with {
-      title: 'Latest Thinking',
-      breadcrumb: [
-        { text: 'Leadership and Impact' }
-      ]
-    } %}
+{% block layout_content %}
 
-    <div class="page__content">
+  <ol class="list list--dividers list--lg mb-6">
+    {% for i in 0..5 %}
+      <li class="list__item">
+      {% if loop.first %}
+        {% include 'partials/story-teaser.twig' with {
+          featured: true
+        } %}
+      {% else %}
+        {% include 'partials/story-teaser.twig' %}
+      {% endif %}
+      </li>
+    {% endfor %}
+  </ol>
 
-      <article>
-        <figure>
-          <picture>
-            <img src="http://placehold.it/800x500" alt="">
-          </picture>
-        </figure>
-        <div>
-          <h1>Lorem ipsum dolor sit amet, consectetuer adipiscing </h1>
-          <p>By Author Name</p>
-          <ul>
-            <li>tag name her</li>
-          </ul>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit suscipit aliquet. Vivamus faucibus vel purus vel malesuada. Vivamus gravida erat eu mollis porta. Nulla interdum sit amet magna eu gravida. Phasellus scelerisque est id erat ornare, ut egestas vulputate.</p>
-        </div>
-      </article>
+  {% include 'partials/pagination.twig' %}
 
-    </div>
-
-  </section>
 {% endblock %}
