--- a/src/scss/components/_story-teaser.scss
+++ b/src/scss/components/_story-teaser.scss
@@ -4,12 +4,23 @@
   @include media(md) {
     display: flex;
   }
+
+  &.story-teaser--featured {
+    display: block;
+  }
 }
 
 .story-teaser__media {
   float: right;
   padding-left: 10px;
   padding-bottom: 10px;
+
+  .story-teaser--featured & {
+    float: none;
+    padding-left: 0;
+    padding-bottom: 0;
+    margin-bottom: 20px;
+  }
 
   @include media(md) {
     flex: 0 0 auto;
@@ -38,7 +49,7 @@
   margin-bottom: 10px;
 }
 
-.story-teaser__byline {
+.story-teaser__author {
   font-family: $font-family-sans-serif;
   font-size: 14px;
   color: $black;
