--- a/src/templates/partials/callout.twig
+++ b/src/templates/partials/callout.twig
@@ -1,4 +1,4 @@
-<div class="callout{% if className %} {{className}}{% endif %}{% if light %} callout--light{% endif %}">
+<div class="callout{% if className %} {{className}}{% endif %}{% if light %} callout--light{% endif %}{% if theme %} callout--{{theme}}{% endif %}">
   <div class="callout__header">
     {% if preheader %}
       <em class="callout__preheader">{{preheader}}</em>
